Fix Aces Slot Alignment
The aces slots were misaligned from both the 7 tableaus below and also from the deck to the left of it. Alined proper adding #fnd {
      transform: translateY(-20px);
     }
and also updating.fnd .pile {
        left: 42%;
     }

~
~
".git/COMMIT_EDITMSG" 14L, 297C

--- a/demo/cards2.css
+++ b/demo/cards2.css
@@ -559,8 +559,12 @@
      }
   
   /* foundation */
+
+     #fnd {
+      transform: translateY(-20px);
+     }
      .fnd .pile {
-        left: 43.5%;
+        left: 42%;
      }
      .fnd .pile::before {
         content '';
@@ -574,7 +578,7 @@
         margin-top: -0.6em;
         line-height: 1;
         text-align: center;
-        opacity: 0.25;
+        opacity: .25;
      }
      @media screen and (min-width: 768px) {
         .fnd .pile::before {
